feat: add clustrmaps.

--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -72,5 +72,9 @@ layout: default
         <div class="contact-note">{{ site.contact_note }}</div>
       </div>
     {% endif %}
+
+    <!-- Map -->
+    <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=HTfdf3sjgQlLmVmJQOQf7AxSr2yfdnh8OMq-zruniFo&cl=ffffff&w=a"></script>
+
   </article>
 </div>
